--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-global-props": "^1.1.5",
+    "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -33,7 +36,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
