--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.7.2",
+    "react-native-ratings": "^7.5.0",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
